--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "SpyDust"
-version = "1.2"
+version = "1.3"
 description = "A code for modeling spinning dust radiation"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
-    "numpy",
+    "numpy<2.4",
     "scipy",
     "mpi4py",
 ]
